fix(splash): Change location visibility to hidden

--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -31,6 +31,7 @@
     font-weight: 100;
     margin-top: 0;
     padding-bottom: 20vh;
+    visibility: hidden;
 }
 
 #title > img {
